[HoverCard][IndexTable.Cell] Prevent activator styles from breaking truncation of children

--- a/polaris-react/src/components/AlphaHoverCard/AlphaHoverCard.module.scss
+++ b/polaris-react/src/components/AlphaHoverCard/AlphaHoverCard.module.scss
@@ -61,6 +61,7 @@
   width: fit-content;
 
   &.snapToParent {
+    height: 100%;
     width: 100%;
   }
 }
